--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* General Styling */
 body {
-    background-image: url("black.jpg");
+    background-image: url("/Users/aahilpenwalla/Desktop/Webdev-Lab6/images/black.jpg");
 }
 
 #page-wrapper {
@@ -12,7 +12,7 @@ body {
 
 /* Header Styling */
 #header {
-    background-image: url("black.jpg");
+    background-image: url("/Users/aahilpenwalla/Desktop/Webdev-Lab6/images/black.jpg");
     height: 80px;
     clear: both;
     position: relative;
