--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 
 /* Header Styling */
 #header {
-    background-image: url("../images/black.jpg");
+    background-image: url("./images/black.jpg");
     height: 80px;
     clear: both;
     position: relative;
@@ -80,7 +80,7 @@ body {
 
 /* Main Content Styling */
 #content-wrapper {
-    background-image: url("../images/repeating.png");
+    background-image: url("./images/repeating.png");
     float: left;
 }
 
